--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ console.log(bg);
     				<p>tel: +385 97 782 1645</p>
     				<p>e-mail: inka.pelin13@gmail.com</p>
     				<p>adresa: 31000 Osijek, Croatia </p>
-    				<p><a href="https://www.facebook.com/inka.pelin.3"><img src="images/face.png"></a><a href=""><img src="images/whatsup.png"></a><a href="https://www.linkedin.com/in/inka-pelin-65262b134/"><img src="images/linkedin.png"></a></p>
+    				<p><a href="#"><img src="images/face.png"></a><a href="#"><img src="images/whatsup.png"></a><a href="https://www.linkedin.com/in/inka-pelin-65262b134/"><img src="images/linkedin.png"></a></p>
     			</div>
     			<div id="map"></div>
     		</div>
